# Prototype-Personality

./: .gitignore  README.md  SETUP.md  compose.yml  nx.json  package-lock.json  package.json  requirements.txt
.archive/: compose.yml  main.py
.archive/nx/: README.md
.archive/services/language_model/: .gitignore
.archive/src/: application.py  knowledge.py  senses.py
.archive/test_project/: project.json  pyproject.toml
.archive/test_project/tests/: test_hello.py
.archive/test_project/x/: hello.py
applications/cognitive_processing/: BUILD  main.py  pyproject.toml  requirements.txt
applications/dashboard/: project.json  pyproject.toml
applications/language_model/: Dockerfile  language_model.py
applications/language_model/.archive/: .dockerignore
applications/language_model/source/: config.py
applications/speech_embed_trainer/: requirements.txt
applications/speech_embed_trainer/.archive/: Dockerfile
applications/speech_recognition/: configuration.ini  pyproject.toml  setup.ps1
applications/speech_recognition/source/: main.py
applications/speech_recognition/speech_recognition/: cli.py  config.py  server.py  speech_recognition.py
applications/text_to_speech/: .gitignore  configuration.ini  main.py  pyproject.toml
applications/text_to_speech/.archive/: Dockerfile
applications/text_to_speech/output/: se.pth
applications/text_to_speech/text_to_speech/: cli.py  config.py  converter.py  main.py  setup.py  text_to_speech.py
libraries/python_config/: pyproject.toml
libraries/python_config/python_config/: config.py  utilities.py
libraries/python_discovery/: pyproject.toml
libraries/python_discovery/python_discovery/: etcd_service_registrar.py
libraries/python_sound_input/: pyproject.toml
libraries/python_sound_input/python_sound_input/: listener.py
libraries/python_utilities/: pyproject.toml
libraries/python_utilities/python_utilities/: cuda.py  logger.py  utilities.py
resources/: .gitignore
services/language_model/: configuration.ini  main.py  requirements.txt  template.py
services/speech_recognition/: Dockerfile  requirements.txt
services/text_to_speech/: requirements.txt  setup.py
src/: communication.py  knowledge.py
tools/voice_trainer/: .Dockerignore  build.bat  main.py  run.bat
