[tool.poetry]
name = "speech-recognition"
version = "0.1.0"
description = ""
authors = ["Jacek Lipiec <jacek.lipiec.bc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"
openai-whisper = "20240930"
torch = { version = "2.4.1+cu124", source = "pytorch-gpu" }
torchaudio = { version = "2.4.1+cu124", source = "pytorch-gpu" }
numpy = "^2.0.2"
Flask = "^3.0.3"

[[tool.poetry.packages]]
include = "source"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.poetry.scripts]
start = "source.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
