[tool.poetry]
name = "python-discovery"
version = "0.1.0"
description = ""
authors = ["Jacek Lipiec <jacek.lipiec.bc@gmail.com>"]


[[tool.poetry.packages]]
include = "python_discovery"


[tool.poetry.dependencies]
python = "^3.10"
etcd3 = "^0.12.0"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
