[tool.poetry]
name = "python-sound-input"
version = "0.1.0"
description = ""
authors = ["Jacek Lipiec <jacek.lipiec.bc@gmail.com>"]


[[tool.poetry.packages]]
include = "python_sound_input"


[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.22.0"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
